Bug 1324983 - Don't persist styles on elements not in the document. r=emilio

MozReview-Commit-ID: 4Z8IxPS6rfE