layout/style/ServoBindings.cpp
@@ -86,6 +86,12 @@ Gecko_NodeIsElement(RawGeckoNodeBorrowed aNode)
   return aNode->IsElement();
 }
 
+bool
+Gecko_IsInDocument(RawGeckoNodeBorrowed aNode)
+{
+  return aNode->IsInComposedDoc();
+}
+
 RawGeckoNodeBorrowedOrNull
 Gecko_GetParentNode(RawGeckoNodeBorrowed aNode)
 {
